--- a/WebContent/assignments/manageAssignments/list.xhtml
+++ b/WebContent/assignments/manageAssignments/list.xhtml
@@ -146,7 +146,7 @@
                     <div class="nemoUtilsFormInternalButton">
                     	<p:commandButton 	action="#{manageAssignmentsController.delete}" 
                         					value="#{msgs['crud.button.confirmDeletion']}" icon="ui-icon-check" 
-                        					update=":trashForm :buttonsForm :listingForm" />
+                        					update=":trashForm :buttonsForm :listingForm :globalMessages" />
                     
                         <p:commandButton 	action="#{manageAssignmentsController.cancelDeletion}" 
                         					value="#{msgs['crud.button.cancelDeletion']}" icon="ui-icon-closethick" 
